--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,6 @@
-
-sonar.projectKey=sc-sq-c-family-examples_...
+sonar.projectName=windows-cmake-gh-actions-sc
+sonar.projectKey=sc-sq-c-family-examples_windows-cmake-gh-actions-sc
 sonar.organization=sc-sq-c-family-examples
-sonar.projectName=
 sonar.projectVersion=1.0-SNAPSHOT
 
 # =====================================================
