--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
     name: Build
     runs-on: windows-latest
     env:
-      SONAR_SCANNER_VERSION: 4.4.0.2170
+      SONAR_SCANNER_VERSION: 4.6.1.2450 # Find the latest version in the "Windows" link on this page:
+                                        # https://sonarcloud.io/documentation/analysis/scan/sonarscanner/
     steps:
       - uses: actions/checkout@v2
         with:
