--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
     env:
       SONAR_SCANNER_VERSION: 4.6.1.2450 # Find the latest version in the "Windows" link on this page:
                                         # https://sonarcloud.io/documentation/analysis/scan/sonarscanner/
+      SONAR_SERVER_URL: "https://sonarcloud.io"
     steps:
       - uses: actions/checkout@v2
         with:
@@ -36,7 +37,7 @@ jobs:
           echo "$HOME/.sonar/sonar-scanner-${{ env.SONAR_SCANNER_VERSION }}-windows/bin" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
       - name: Download and set up build-wrapper
         env:
-           BUILD_WRAPPER_DOWNLOAD_URL: https://sonarcloud.io/static/cpp/build-wrapper-win-x86.zip
+           BUILD_WRAPPER_DOWNLOAD_URL: ${{ env.SONAR_SERVER_URL }}/static/cpp/build-wrapper-win-x86.zip
         run: |
           curl -sSLo $HOME/.sonar/build-wrapper.zip ${{ env.BUILD_WRAPPER_DOWNLOAD_URL }} 
           unzip -o $HOME/.sonar/build-wrapper.zip -d $HOME/.sonar/
@@ -52,5 +53,5 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_ARGS: "--define sonar.projectVersion=1.0 --define sonar.sources=src --define sonar.cfamily.build-wrapper-output=build_wrapper_output_directory --define sonar.sourceEncoding=UTF-8"  
         run: |
-          sonar-scanner --define sonar.host.url="https://sonarcloud.io" ${{ env.SONAR_ARGS }}
+          sonar-scanner --define sonar.host.url="${{ env.SONAR_SERVER_URL }}" ${{ env.SONAR_ARGS }}
 
